Updated German translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-01-23  Hendrik Richter  <hendrik@gnome-de.org>
+
+	* de.po: Updated German translation.
+
 2005-01-22   Funda Wang  <fundawang@linux.net.cn>
 
 	* zh_CN.po: Updated Simplified Chinese translation.
@@ -5554,7 +5558,8 @@ Mon Jun 03 14:18:51 2002  George Lebl <jirka@5z.com>
 
 2001-10-02  Frederic Crozat  <fcrozat@mandrakesoft.com>
 
-	* fr.po: Add missing '\n' in which was oversizing
+	* fr.po: Add missing '
+' in which was oversizing
 	Nautilus Preference Dialog
 
 2001-09-29  Christian Rose  <menthos@menthos.com>
@@ -6261,7 +6266,8 @@ Mon Apr 16 08:06:45 2001  George Lebl <jirka@5z.com>
 
 2001-03-29  Darin Adler  <darin@eazel.com>
 
-	* de.po: Added missing \n characters to some long lines
+	* de.po: Added missing 
+ characters to some long lines
 	in the first time druid indexing messages to fix wide
 	druid window.
 
@@ -6353,7 +6359,8 @@ Mon Apr 16 08:06:45 2001  George Lebl <jirka@5z.com>
 
 2001-03-08  Darin Adler  <darin@eazel.com>
 
-	* sv.po: Added missing \n characters to some long lines
+	* sv.po: Added missing 
+ characters to some long lines
 	in the first time druid indexing messages to fix wide
 	druid window.
 
@@ -6380,7 +6387,8 @@ Mon Apr 16 08:06:45 2001  George Lebl <jirka@5z.com>
 
 	* da.po: Fixed recently-changed da.po (checked in without a
 	ChangeLog entry) to get rid of entries where the original text
-	does not end with "\n", but the translated text does. Apparently,
+	does not end with "
+", but the translated text does. Apparently,
 	the gettext framework does not allow this kind of translation,
 	even though I can see why it could be desirable.
 
@@ -6479,7 +6487,8 @@ Mon Apr 16 08:06:45 2001  George Lebl <jirka@5z.com>
 
 2001-03-01  Darin Adler  <darin@eazel.com>
 
-	* hu.po: Fix entry that was missing "\n".
+	* hu.po: Fix entry that was missing "
+".
 
 2001-03-01  Szabolcs Ban  <shooby@gnome.hu>
 
@@ -6814,7 +6823,8 @@ Mon Apr 16 08:06:45 2001  George Lebl <jirka@5z.com>
 
 2001-02-12  John Sullivan  <sullivan@eazel.com>
 
-	* sk.po: Removed an extra "\n" that didn't match between
+	* sk.po: Removed an extra "
+" that didn't match between
 	msgid and msgstr, breaking "make dist"
 
 2001-02-12  Christophe Merlet  <christophe@merlet.net>
