Remove "Reset Background" entry from folder context menus.
2005-01-23  Martin Wehner  <martin.wehner@epost.de>

	* src/file-manager/fm-actions.h:
	* src/file-manager/fm-desktop-icon-view.c: (real_merge_menus):
	* src/file-manager/fm-directory-view.c: (real_update_menus):
	* src/file-manager/nautilus-directory-view-ui.xml:
	Remove "Reset Background" entry from folder context menus.

	Patch from Jaap Haitsma <jaap@haitsma.org>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2005-01-23  Martin Wehner  <martin.wehner@epost.de>
+
+	* src/file-manager/fm-actions.h:
+	* src/file-manager/fm-desktop-icon-view.c: (real_merge_menus):
+	* src/file-manager/fm-directory-view.c: (real_update_menus):
+	* src/file-manager/nautilus-directory-view-ui.xml:
+	Remove "Reset Background" entry from folder context menus.
+	
+	Patch from Jaap Haitsma <jaap@haitsma.org>
+
 2005-01-21  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
 
 	* src/nautilus-window-menus.c: Correct License (It said Evince).
