--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2005-01-23  Christian Rose  <menthos@menthos.com>
+
+	* POTFILES.in: Sorted.
+	* sv.po: Updated Swedish translation.
+
 2005-01-23  Hendrik Richter  <hendrik@gnome-de.org>
 
 	* de.po: Updated German translation.
