Use warning icon instead of info one. Use GtkMessageDialog. Patch from
2005-01-24  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-file-operations.c:
	(confirm_empty_trash):
	Use warning icon instead of info one.
	Use GtkMessageDialog.
	Patch from Luca Ferretti <elle.uca@libero.it>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2005-01-24  Alexander Larsson  <alexl@redhat.com>
+
+	* libnautilus-private/nautilus-file-operations.c:
+	(confirm_empty_trash):
+	Use warning icon instead of info one.
+	Use GtkMessageDialog.
+	Patch from Luca Ferretti <elle.uca@libero.it>
+
 2005-01-23  Martin Wehner  <martin.wehner@epost.de>
 
 	* src/file-manager/fm-actions.h:
