WE WANT THE CHEESEPUFF!!!
2005-01-24  Alexander Larsson  <alexl@redhat.com>

	* src/nautilus-window-menus.c (action_about_nautilus_callback):
	WE WANT THE CHEESEPUFF!!!

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2005-01-24  Alexander Larsson  <alexl@redhat.com>
 
+	* src/nautilus-window-menus.c (action_about_nautilus_callback):
+	WE WANT THE CHEESEPUFF!!!
+
+2005-01-24  Alexander Larsson  <alexl@redhat.com>
+
 	* libnautilus-private/nautilus-file-operations.c:
 	(confirm_empty_trash):
 	Use warning icon instead of info one.
