--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-01-24  Hendrik Richter  <hendrik@gnome-de.org>
+
+	* de.po: Updated German translation.
+
 2005-01-23  Christian Rose  <menthos@menthos.com>
 
 	* POTFILES.in: Sorted.
