Updated Spanish translation.
2005-01-24  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>

	* es.po: Updated Spanish translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,8 +1,12 @@
+2005-01-24  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
+
+	* es.po: Updated Spanish translation.
+
 2005-01-24  Hendrik Richter  <hendrik@gnome-de.org>
 
 	* de.po: Updated German translation.
 
-2005-01-23  Christian Rose  <menthos@menthos.com>
+2005-01-23  Ch4ristian Rose  <menthos@menthos.com>
 
 	* POTFILES.in: Sorted.
 	* sv.po: Updated Swedish translation.
