--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-01-25  Alexander Larsson  <alexl@redhat.com>
+
+	* libnautilus-private/nautilus-file-operations.c (confirm_empty_trash):
+	Fix typo.
+
 2005-01-25  Padraig O'Briain  <padraig.obriain@sun.com>
 
 	* libnautilus-private/nautilus-icon-container.c: 
