Updated Simplified Chinese translation

--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: nautilus\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-01-25 04:44+0100\n"
+"POT-Creation-Date: 2005-01-25 12:45+0100\n"
 "PO-Revision-Date: 2005-01-25 17:02+0800\n"
 "Last-Translator: Funda Wang <fundawang@linux.net.cn>\n"
 "Language-Team: zh_CN <i18n-translation@lists.linux.net.cn>\n"
@@ -2179,8 +2179,10 @@ msgstr "您确定要清空回收站中的全部项目吗？"
 #: libnautilus-private/nautilus-file-operations.c:2565
 msgid ""
 "If you choose to empty the trash, all items in it will be permanently lost. "
-"Please note that you can also delete them sepately."
-msgstr "如果您清空了回收站，其中的项目将被永久删除。请注意，您也可以逐一删除回收站中的项目。"
+"Please note that you can also delete them separately."
+msgstr ""
+"如果您清空了回收站，其中的项目将被永久删除。请注意，您也可以逐一删除回收站中"
+"的项目。"
 
 #. name, stock id
 #: libnautilus-private/nautilus-file-operations.c:2585
@@ -3822,7 +3824,7 @@ msgstr "用“%s”打开(_O)"
 #, c-format
 msgid "Open in New Window"
 msgid_plural "Open in %d New Windows"
-msgstr[0] "在%d个新窗口中打开"
+msgstr[0] "在 %d 个新窗口中打开"
 
 #: src/file-manager/fm-directory-view.c:6230
 msgid "Browse Folder"
