Update for release.
2005-01-25  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release.

	* MAINTAINERS:
	Add Martin, remove Darin.
	Update daves email address.

	* configure.in:
	Bump version to 2.9.90
	Require eel 2.9.90

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,12 @@
-This is nautilus 2.9.2, the file manager for the Gnome 2 desktop.
+This is nautilus 2.9.90, the file manager for the Gnome 2 desktop.
+
+Major changes in 2.9.90 are:
+* Better window titles for browser windows
+* Better icons for burn: & computer: in the ui
+* Allow eject of unmounted devices
+* Better handling of DnD from mozilla
+* Make connect to server dialog availible as separate app
+* Use GtkAboutDialog
 
 Major changes in 2.9.2 are:
 * Use the new mime API
