--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,18 @@
 2005-01-25  Alexander Larsson  <alexl@redhat.com>
 
+	* NEWS:
+	Update for release.
+
+	* MAINTAINERS:
+	Add Martin, remove Darin.
+	Update daves email address.
+
+	* configure.in:
+	Bump version to 2.9.90
+	Require eel 2.9.90
+
+2005-01-25  Alexander Larsson  <alexl@redhat.com>
+
 	* libnautilus-private/nautilus-file-operations.c (confirm_empty_trash):
 	Fix typo.
 
