--- a/po/pt.po
+++ b/po/pt.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 2.10\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-01-24 22:54+0000\n"
+"POT-Creation-Date: 2005-01-25 16:20+0100\n"
 "PO-Revision-Date: 2005-01-24 23:00+0000\n"
 "Last-Translator: Duarte Loreto <happyguy_pt@hotmail.com>\n"
 "Language-Team: Portuguese <gnome_pt@yahoogroups.com>\n"
@@ -2256,12 +2256,13 @@ msgid "Empty all of the items from the trash?"
 msgstr "Esvaziar todos os itens contidos no lixo?"
 
 #: libnautilus-private/nautilus-file-operations.c:2565
+#, fuzzy
 msgid ""
 "If you choose to empty the trash, all items in it will be permanently lost. "
-"Please note that you can also delete them sepately."
+"Please note that you can also delete them separately."
 msgstr ""
-"Se esvaziar o lixo, todos os itens nele contidos serão definitivamente apagados. "
-"Note que pode também apagá-los individualmente."
+"Se esvaziar o lixo, todos os itens nele contidos serão definitivamente "
+"apagados. Note que pode também apagá-los individualmente."
 
 #. name, stock id
 #: libnautilus-private/nautilus-file-operations.c:2585
@@ -6054,7 +6055,8 @@ msgstr "Vista da pasta actual"
 
 #: src/nautilus-window-manage-views.c:1347
 msgid "Nautilus has no installed viewer capable of displaying the folder."
-msgstr "Nautilus não possui um visualizador instalado capaz de apresentar a pasta."
+msgstr ""
+"Nautilus não possui um visualizador instalado capaz de apresentar a pasta."
 
 #: src/nautilus-window-manage-views.c:1353
 msgid "The location is not a folder."
