--- a/po/es.po
+++ b/po/es.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-01-24 19:41+0100\n"
+"POT-Creation-Date: 2005-01-25 16:20+0100\n"
 "PO-Revision-Date: 2005-01-24 19:42+0100\n"
 "Last-Translator: Francisco Javier F. Serrador <serrador@cvs.gnome.org>\n"
 "Language-Team: Spanish <traductores@es.gnome.org>\n"
@@ -926,7 +926,8 @@ msgstr "Nombre del icono de la papelera del escritorio"
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:28
 msgid "Enable 'special' flags in file preferences dialog"
-msgstr "Activar los atributos «especiales» en el diálogo de preferencias de archivo"
+msgstr ""
+"Activar los atributos «especiales» en el diálogo de preferencias de archivo"
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:29
 msgid "Enables the classic Nautilus behavior, where all windows are browsers"
@@ -977,7 +978,8 @@ msgstr ""
 "archivos."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:35
-msgid "If set to true, newly opened windows will have the location bar visible."
+msgid ""
+"If set to true, newly opened windows will have the location bar visible."
 msgstr ""
 "Si está definido como «true», las ventanas nuevas abiertas tendrán la barra "
 "de dirección visible."
@@ -1149,7 +1151,8 @@ msgstr ""
 "juntos en las ventanas nuevas."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:56
-msgid "If true, labels will be placed beside icons rather than underneath them."
+msgid ""
+"If true, labels will be placed beside icons rather than underneath them."
 msgstr ""
 "Si es «true» las etiquetas serán colocadas a los lados de los iconos en "
 "lugar de por debajo de éstos."
@@ -1325,11 +1328,13 @@ msgstr ""
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:82
 msgid "The default width of the side pane in new windows."
-msgstr "La anchura predeterminada para el panel lateral en las ventanas nuevas."
+msgstr ""
+"La anchura predeterminada para el panel lateral en las ventanas nuevas."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:83
 msgid "The font description used for the icons on the desktop."
-msgstr "La descripción de la tipografía usada para los iconos en el escritorio."
+msgstr ""
+"La descripción de la tipografía usada para los iconos en el escritorio."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:84
 msgid ""
@@ -1341,7 +1346,8 @@ msgstr ""
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:85
 msgid "The side pane view to show in newly opened windows."
-msgstr "La vista del panel lateral que se mostrará en la ventanas nuevas abiertas."
+msgstr ""
+"La vista del panel lateral que se mostrará en la ventanas nuevas abiertas."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:86
 msgid ""
@@ -1430,11 +1436,13 @@ msgstr "Define si se ha establecido un fondo predeterminado de carpeta."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:100
 msgid "Whether a custom default side pane background has been set."
-msgstr "Indica si se ha establecido un fondo predeterminado en el panel lateral."
+msgstr ""
+"Indica si se ha establecido un fondo predeterminado en el panel lateral."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:101
 msgid "Whether to ask for confirmation when moving files to trash"
-msgstr "Indica si se debe solicitar una confirmación al mover archivos a la papelera"
+msgstr ""
+"Indica si se debe solicitar una confirmación al mover archivos a la papelera"
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:102
 msgid "Whether to enable immediate deletion"
@@ -1691,7 +1699,8 @@ msgstr "El emblema no puede ser instalado."
 
 #: libnautilus-private/nautilus-emblem-utils.c:198
 msgid "Sorry, but you must specify a non-blank keyword for the new emblem."
-msgstr "Lo siento, pero debe especificar una descripción para el emblema nuevo."
+msgstr ""
+"Lo siento, pero debe especificar una descripción para el emblema nuevo."
 
 # components/services/trilobite/libtrilobite/trilobite-core-utils.c:197
 #: libnautilus-private/nautilus-emblem-utils.c:199
@@ -1702,7 +1711,8 @@ msgid "Couldn't Install Emblem"
 msgstr "No se ha podido instalar el emblema"
 
 #: libnautilus-private/nautilus-emblem-utils.c:203
-msgid "Sorry, but emblem keywords can only contain letters, spaces and numbers."
+msgid ""
+"Sorry, but emblem keywords can only contain letters, spaces and numbers."
 msgstr ""
 "Lo siento, pero la descripción del emblema sólo puede contener letras, "
 "espacios y números."
@@ -2462,10 +2472,14 @@ msgid "Empty all of the items from the trash?"
 msgstr "¿Seguro que desea vaciar todos los elementos de la papelera?"
 
 #: libnautilus-private/nautilus-file-operations.c:2565
+#, fuzzy
 msgid ""
 "If you choose to empty the trash, all items in it will be permanently lost. "
-"Please note that you can also delete them sepately."
-msgstr "Si elige vaciar la papelera, todos los elementos que estén en ella serán borrados permanentemente. Tenga en cuenta de que también puede borrarlos cada uno por separado."
+"Please note that you can also delete them separately."
+msgstr ""
+"Si elige vaciar la papelera, todos los elementos que estén en ella serán "
+"borrados permanentemente. Tenga en cuenta de que también puede borrarlos "
+"cada uno por separado."
 
 # src/file-manager/fm-directory-view.c:2154
 #. name, stock id
@@ -3111,7 +3125,8 @@ msgstr ""
 msgid ""
 "Do you want to switch to manual layout and leave this item where you dropped "
 "it?"
-msgstr "¿Quiere cambiar a organización manual y dejar este elemento donde lo soltó?"
+msgstr ""
+"¿Quiere cambiar a organización manual y dejar este elemento donde lo soltó?"
 
 # libnautilus-private/nautilus-icon-dnd.c:703
 #: libnautilus-private/nautilus-icon-dnd.c:767
@@ -3253,7 +3268,8 @@ msgstr ""
 # src/nautilus-window-manage-views.c:1287
 #: libnautilus-private/nautilus-program-choosing.c:617
 #: src/nautilus-window-manage-views.c:1408
-msgid "Check that the spelling is correct and that your proxy settings are correct."
+msgid ""
+"Check that the spelling is correct and that your proxy settings are correct."
 msgstr ""
 "Compruebe que lo que escribió es correcto y que su configuración del proxy "
 "es correcta."
@@ -3319,7 +3335,8 @@ msgid "This drop target only supports local files."
 msgstr "El destino sólo soporta archivos locales."
 
 #: libnautilus-private/nautilus-program-choosing.c:921
-msgid "To open non-local files copy them to a local folder and then drop them again."
+msgid ""
+"To open non-local files copy them to a local folder and then drop them again."
 msgstr ""
 "Para abrir archivos no locales cópielos a una carpeta local y luego "
 "suéltelos nuevamente."
@@ -3583,7 +3600,8 @@ msgstr "Cambiar el _fondo del escritorio"
 
 #. label, accelerator
 #: src/file-manager/fm-desktop-icon-view.c:667
-msgid "Show a window that lets you set your desktop background's pattern or color"
+msgid ""
+"Show a window that lets you set your desktop background's pattern or color"
 msgstr ""
 "Muestra una ventana que le deja configurar el patrón del fondo o el color de "
 "su escritorio"
@@ -3634,7 +3652,8 @@ msgstr "¿Está seguro que desea eliminar permanentemente «%s»?"
 #: src/file-manager/fm-directory-view.c:817
 #, c-format
 msgid "Are you sure you want to permanently delete the %d selected item?"
-msgid_plural "Are you sure you want to permanently delete the %d selected items?"
+msgid_plural ""
+"Are you sure you want to permanently delete the %d selected items?"
 msgstr[0] ""
 "¿Está seguro de que desea eliminar permanentemente el %d elemento "
 "seleccionado?"
@@ -3739,7 +3758,8 @@ msgstr "%s%s, %s"
 #: src/file-manager/fm-directory-view.c:1958
 #, c-format
 msgid "The folder \"%s\" contains more files than Nautilus can handle."
-msgstr "La carpeta «%s» contiene más archivos de los que Nautilus puede manejar."
+msgstr ""
+"La carpeta «%s» contiene más archivos de los que Nautilus puede manejar."
 
 #: src/file-manager/fm-directory-view.c:1964
 msgid "Some files will not be displayed."
@@ -3751,7 +3771,8 @@ msgstr "Demasiados archivos"
 
 #: src/file-manager/fm-directory-view.c:3113
 msgid "Cannot move file to trash, do you want to delete immediately?"
-msgstr "No puede mover el archivo a la papelera. ¿Quiere eliminarlo inmediatamente?"
+msgstr ""
+"No puede mover el archivo a la papelera. ¿Quiere eliminarlo inmediatamente?"
 
 #: src/file-manager/fm-directory-view.c:3114
 #, c-format
@@ -3765,7 +3786,8 @@ msgstr ""
 "inmediatamente?"
 
 #: src/file-manager/fm-directory-view.c:3121
-msgid "Cannot move some items to trash, do you want to delete these immediately?"
+msgid ""
+"Cannot move some items to trash, do you want to delete these immediately?"
 msgstr ""
 "No puede mover algunos de los elementos a la papelera, ¿quiere borrarlos "
 "directamente?"
@@ -3957,8 +3979,10 @@ msgstr "«%s» será copiado si selecciona la orden «Pegar archivos»"
 
 #: src/file-manager/fm-directory-view.c:5203
 #, c-format
-msgid "The %d selected item will be moved if you select the Paste Files command"
-msgid_plural "The %d selected items will be moved if you select the Paste Files command"
+msgid ""
+"The %d selected item will be moved if you select the Paste Files command"
+msgid_plural ""
+"The %d selected items will be moved if you select the Paste Files command"
 msgstr[0] ""
 "El %d elemento seleccionado será movido si selecciona la orden «Pegar "
 "Archivos»"
@@ -3968,8 +3992,10 @@ msgstr[1] ""
 
 #: src/file-manager/fm-directory-view.c:5210
 #, c-format
-msgid "The %d selected item will be copied if you select the Paste Files command"
-msgid_plural "The %d selected items will be copied if you select the Paste Files command"
+msgid ""
+"The %d selected item will be copied if you select the Paste Files command"
+msgid_plural ""
+"The %d selected items will be copied if you select the Paste Files command"
 msgstr[0] ""
 "El %d elemento seleccionado será copiado si selecciona la orden «Pegar "
 "Archivos»"
@@ -4033,7 +4059,8 @@ msgstr "Abrir _con"
 #. name, stock id, label
 #: src/file-manager/fm-directory-view.c:5716
 msgid "Choose a program with which to open the selected item"
-msgstr "Selecciona un programa con el cual poder abrir el elemento seleccionado"
+msgstr ""
+"Selecciona un programa con el cual poder abrir el elemento seleccionado"
 
 #: src/file-manager/fm-directory-view.c:5717
 msgid "_Scripts"
@@ -4053,7 +4080,8 @@ msgstr "_Propiedades"
 #. label, accelerator
 #: src/file-manager/fm-directory-view.c:5721
 msgid "View or modify the properties of each selected item"
-msgstr "Muestra o permite modificar las propiedades de cada elemento seleccionado"
+msgstr ""
+"Muestra o permite modificar las propiedades de cada elemento seleccionado"
 
 # src/file-manager/fm-directory-view.c:2140
 # src/file-manager/fm-directory-view.c:2257
@@ -4167,7 +4195,8 @@ msgstr "_Pegar los archivos"
 
 #. label, accelerator
 #: src/file-manager/fm-directory-view.c:5778
-msgid "Move or copy files previously selected by a Cut Files or Copy Files command"
+msgid ""
+"Move or copy files previously selected by a Cut Files or Copy Files command"
 msgstr ""
 "Mueve o copia archivos previamente seleccionados por una orden «Cortar» o "
 "«Copiar» archivos»"
@@ -4209,7 +4238,8 @@ msgstr "_Patrón de selección"
 #. label, accelerator
 #: src/file-manager/fm-directory-view.c:5792
 msgid "Select items in this window matching a given pattern"
-msgstr "Selecciona los elementos en esta ventana que coincidan con un patrón dado"
+msgstr ""
+"Selecciona los elementos en esta ventana que coincidan con un patrón dado"
 
 # src/file-manager/fm-directory-view.c:2148
 #. name, stock id
@@ -4349,7 +4379,8 @@ msgstr "Mostrar los archivos _ocultos"
 #. label, accelerator
 #: src/file-manager/fm-directory-view.c:5843
 msgid "Toggles the display of hidden files in the current window"
-msgstr "Indica si deben mostrarse o no los archivos ocultos en la ventana actual"
+msgstr ""
+"Indica si deben mostrarse o no los archivos ocultos en la ventana actual"
 
 # src/nautilus-sidebar.c:1145
 #: src/file-manager/fm-directory-view.c:6201
@@ -4458,7 +4489,8 @@ msgstr "Arrastrar y soltar no está soportado."
 
 #: src/file-manager/fm-directory-view.c:7812
 msgid "Drag and drop is only supported on local file systems."
-msgstr "Arrastrar y soltar sólo está soportado en los sistemas de archivos locales."
+msgstr ""
+"Arrastrar y soltar sólo está soportado en los sistemas de archivos locales."
 
 #: src/file-manager/fm-directory-view.c:7813
 #: src/file-manager/fm-directory-view.c:7835
@@ -4497,13 +4529,15 @@ msgstr "Lanzador"
 # src/nautilus-window-manage-views.c:648
 #: src/file-manager/fm-error-reporting.c:57
 #, c-format
-msgid "You do not have the permissions necessary to view the contents of \"%s\"."
+msgid ""
+"You do not have the permissions necessary to view the contents of \"%s\"."
 msgstr "No tiene los permisos suficientes para ver el contenido de «%s»."
 
 #: src/file-manager/fm-error-reporting.c:61
 #, c-format
 msgid "\"%s\" couldn't be found. Perhaps it has recently been deleted."
-msgstr "«%s» no ha podido ser encontrado. Quizás haya sido eliminado recientemente."
+msgstr ""
+"«%s» no ha podido ser encontrado. Quizás haya sido eliminado recientemente."
 
 # src/file-manager/fm-error-reporting.c:115
 #: src/file-manager/fm-error-reporting.c:68
@@ -4523,15 +4557,18 @@ msgstr "Error al mostrar la carpeta"
 # src/file-manager/fm-error-reporting.c:50
 #: src/file-manager/fm-error-reporting.c:103
 #, c-format
-msgid "The name \"%s\" is already used in this folder. Please use a different name."
+msgid ""
+"The name \"%s\" is already used in this folder. Please use a different name."
 msgstr ""
 "El nombre «%s» ya está siendo usado en esta carpeta. Por favor seleccione un "
 "nombre distinto."
 
 #: src/file-manager/fm-error-reporting.c:108
 #, c-format
-msgid "There is no \"%s\" in this folder. Perhaps it was just moved or deleted?"
-msgstr "No existe un «%s» en esta carpeta. ¿Quizás acaba de moverse o borrarse?"
+msgid ""
+"There is no \"%s\" in this folder. Perhaps it was just moved or deleted?"
+msgstr ""
+"No existe un «%s» en esta carpeta. ¿Quizás acaba de moverse o borrarse?"
 
 # src/file-manager/fm-error-reporting.c:55
 #: src/file-manager/fm-error-reporting.c:113
@@ -4581,7 +4618,8 @@ msgstr "Error al renombrar"
 # src/file-manager/fm-error-reporting.c:85
 #: src/file-manager/fm-error-reporting.c:165
 #, c-format
-msgid "You do not have the permissions necessary to change the group of \"%s\"."
+msgid ""
+"You do not have the permissions necessary to change the group of \"%s\"."
 msgstr "No tiene los permisos suficientes para cambiar el grupo de «%s»."
 
 #: src/file-manager/fm-error-reporting.c:169
@@ -4631,7 +4669,8 @@ msgstr "Error al establecer el propietario"
 # src/file-manager/fm-error-reporting.c:137
 #: src/file-manager/fm-error-reporting.c:235
 #, c-format
-msgid "Couldn't change the permissions of \"%s\" because it is on a read-only disk"
+msgid ""
+"Couldn't change the permissions of \"%s\" because it is on a read-only disk"
 msgstr ""
 "No se ha podido cambiar los permisos de «%s» porque está en un disco de sólo "
 "lectura"
@@ -4749,7 +4788,8 @@ msgstr "Re_ordenar por nombre"
 #. label, accelerator
 #: src/file-manager/fm-icon-view.c:1402
 msgid "Reposition icons to better fit in the window and avoid overlapping"
-msgstr "Reposiciona los iconos para que quepan en la ventana y evitar el solapamiento"
+msgstr ""
+"Reposiciona los iconos para que quepan en la ventana y evitar el solapamiento"
 
 #. name, stock id
 #: src/file-manager/fm-icon-view.c:1408
@@ -5728,7 +5768,8 @@ msgstr "<span weight=\"bold\">Descripciones de los iconos</span>"
 
 #: src/nautilus-file-management-properties.glade.h:30
 msgid "<span weight=\"bold\">Icon View Defaults</span>"
-msgstr "<span weight=\"bold\">Valores predeterminados para la vista de iconos</span>"
+msgstr ""
+"<span weight=\"bold\">Valores predeterminados para la vista de iconos</span>"
 
 #: src/nautilus-file-management-properties.glade.h:31
 msgid "<span weight=\"bold\">List Columns</span>"
@@ -5736,7 +5777,8 @@ msgstr "<span weight=\"bold\">Lista de columnas</span>"
 
 #: src/nautilus-file-management-properties.glade.h:32
 msgid "<span weight=\"bold\">List View Defaults</span>"
-msgstr "<span weight=\"bold\">Valores predeterminados para la vista de lista</span>"
+msgstr ""
+"<span weight=\"bold\">Valores predeterminados para la vista de lista</span>"
 
 #: src/nautilus-file-management-properties.glade.h:33
 msgid "<span weight=\"bold\">Other Previewable Files</span>"
@@ -5756,7 +5798,8 @@ msgstr "<span weight=\"bold\">Papelera</span>"
 
 #: src/nautilus-file-management-properties.glade.h:37
 msgid "<span weight=\"bold\">Tree View Defaults</span>"
-msgstr "<span weight=\"bold\">Valores predeterminados para la vista de árbol</span>"
+msgstr ""
+"<span weight=\"bold\">Valores predeterminados para la vista de árbol</span>"
 
 # libnautilus-private/nautilus-global-preferences.c:582
 #: src/nautilus-file-management-properties.glade.h:38
@@ -5789,7 +5832,8 @@ msgstr ""
 # src/file-manager/fm-icon-text-window.c:267
 #: src/nautilus-file-management-properties.glade.h:48
 msgid "Choose the order of information to appear in the list view."
-msgstr "Seleccione el orden en que la información aparecerá en la vista de lista."
+msgstr ""
+"Seleccione el orden en que la información aparecerá en la vista de lista."
 
 # src/file-manager/dfos-xfer.c:763
 #: src/nautilus-file-management-properties.glade.h:49
@@ -6313,7 +6357,8 @@ msgstr "_Borrar histórico"
 #. name, stock id, label
 #: src/nautilus-navigation-window-menus.c:551
 msgid "Clear contents of Go menu and Back/Forward lists"
-msgstr "Limpia los contenidos de los menús «Ir a» y listas de «Atrás» y «Adelante»"
+msgstr ""
+"Limpia los contenidos de los menús «Ir a» y listas de «Atrás» y «Adelante»"
 
 # src/nautilus-window-menus.c:1235
 #: src/nautilus-navigation-window-menus.c:553
@@ -6333,7 +6378,8 @@ msgstr "_Editar los marcadores"
 #. name, stock id, label
 #: src/nautilus-navigation-window-menus.c:557
 msgid "Display a window that allows editing the bookmarks in this menu"
-msgstr "Muestra una ventana que permite editar los marcadores que hay en este menú"
+msgstr ""
+"Muestra una ventana que permite editar los marcadores que hay en este menú"
 
 # libnautilus-private/nautilus-global-preferences.c:165
 #. name, stock id
@@ -7120,4 +7166,3 @@ msgstr "Ver sus servidores de red en el administrador de archivos Nautilus"
 
 #~ msgid "CD _Creator"
 #~ msgstr "Grabador de _CDs"
-
