--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2005-01-25  Alexander Larsson  <alexl@redhat.com>
 
+	* configure.in:
+	Post release version bump.
+
+=== nautilus 2.9.90 ===
+	
+2005-01-25  Alexander Larsson  <alexl@redhat.com>
+
 	* NEWS:
 	Update for release.
 
