Updated Canadian English translation.
	* en_CA.po: Updated Canadian English translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-01-25  Adam Weinberger  <adamw@gnome.org>
+
+	* en_CA.po: Updated Canadian English translation.
+
 === nautilus 2.9.90 ===
 	
 2005-01-25  Hendrik Richter  <hendrik@gnome-de.org>
