--- a/po/en_CA.po
+++ b/po/en_CA.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: nautilus\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-01-25 16:20+0100\n"
-"PO-Revision-Date: 2005-01-21 20:03-0400\n"
+"POT-Creation-Date: 2005-01-25 11:05-0500\n"
+"PO-Revision-Date: 2005-01-25 20:03-0400\n"
 "Last-Translator: Adam Weinberger <adamw@gnome.org>\n"
 "Language-Team: English/Canada <adamw@FreeBSD.org>\n"
 "MIME-Version: 1.0\n"
@@ -2237,16 +2237,16 @@ msgid "Preparing to Empty the Trash..."
 msgstr "Preparing to Empty the Trash..."
 
 #: libnautilus-private/nautilus-file-operations.c:2562
-#, fuzzy
 msgid "Empty all of the items from the trash?"
-msgstr "Are you sure you want to empty all of the items from the trash?"
+msgstr "Empty all of the items from the trash?"
 
 #: libnautilus-private/nautilus-file-operations.c:2565
-#, fuzzy
 msgid ""
 "If you choose to empty the trash, all items in it will be permanently lost. "
 "Please note that you can also delete them separately."
-msgstr "If you empty the trash, items will be permanently deleted."
+msgstr ""
+"If you choose to empty the trash, all items in it will be permanently lost. "
+"Please note that you can also delete them separately."
 
 #. name, stock id
 #: libnautilus-private/nautilus-file-operations.c:2585
@@ -6331,9 +6331,3 @@ msgstr "Network Servers"
 #: src/network-scheme.desktop.in.h:2
 msgid "View your network servers in the Nautilus file manager"
 msgstr "View your network servers in the Nautilus file manager"
-
-#~ msgid "_Empty"
-#~ msgstr "_Empty"
-
-#~ msgid "Use the default background for this location"
-#~ msgstr "Use the default background for this location"
