Trivial string fix.
2001-01-26  Ryan Lortie  <desrt@desrt.ca>
        * libnautilus-private/nautilus-file-operations.c:
        (handle_transfer_overwrite): Trivial string fix.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2001-01-26  Ryan Lortie  <desrt@desrt.ca>
+	* libnautilus-private/nautilus-file-operations.c:
+	(handle_transfer_overwrite): Trivial string fix.
+
 2005-01-25  Alexander Larsson  <alexl@redhat.com>
 
 	* src/file-manager/fm-directory-view.c: (cancel_activate),
