No title on dialog. Patch from Dennis Cranston <dennis_cranston@yahoo.com>
2005-01-27  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-file-operations.c:
	(confirm_empty_trash):
	No title on dialog.
	Patch from Dennis Cranston <dennis_cranston@yahoo.com>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2005-01-27  Alexander Larsson  <alexl@redhat.com>
+
+	* libnautilus-private/nautilus-file-operations.c:
+	(confirm_empty_trash):
+	No title on dialog.
+	Patch from Dennis Cranston <dennis_cranston@yahoo.com>
+
 2001-01-26  Ryan Lortie  <desrt@desrt.ca>
 	* libnautilus-private/nautilus-file-operations.c:
 	(handle_transfer_overwrite): Trivial string fix.
