Make path button more obvious. #145237 Patch from Michael Henson
2005-01-27  Alexander Larsson  <alexl@redhat.com>

	* src/nautilus-spatial-window.c:
	Make path button more obvious. #145237
	Patch from  Michael Henson <mike@axl.net>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2005-01-27  Alexander Larsson  <alexl@redhat.com>
 
+	* src/nautilus-spatial-window.c:
+	Make path button more obvious. #145237
+	Patch from  Michael Henson <mike@axl.net>
+
+2005-01-27  Alexander Larsson  <alexl@redhat.com>
+
 	* src/file-manager/fm-directory-view.c: (ask_link_action):
 	Set focus_on_map for dnd ask dialog to avoid it ending
 	up under the browser window.
