Don't leak the icon info
2005-01-27  Kjartan Maraas  <kmaraas@gnome.org>

	* src/nautilus-main.c: Don't leak the icon info

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-01-27  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* src/nautilus-main.c: Don't leak the icon info
+
 2005-01-27  Alexander Larsson  <alexl@redhat.com>
 
 	* src/nautilus-spatial-window.c:
