Support the API change in libexif > 0.5.12.
2005-01-27  Chris Lahey  <clahey@ximian.com>

	* acconfig.h, configure.in, src/nautilus-image-properties-page.c:
	Support the API change in libexif > 0.5.12.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-01-27  Chris Lahey  <clahey@ximian.com>
+
+	* acconfig.h, configure.in, src/nautilus-image-properties-page.c:
+	Support the API change in libexif > 0.5.12.
+
 2005-01-27  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* src/nautilus-main.c: Don't leak the icon info
