Disable close action on desktop window (#160100)
2005-01-28  Alexander Larsson  <alexl@redhat.com>

	* src/nautilus-actions.h:
	* src/nautilus-desktop-window.c:
	(nautilus_desktop_window_instance_init):
	Disable close action on desktop window (#160100)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2005-01-28  Alexander Larsson  <alexl@redhat.com>
+
+	* src/nautilus-actions.h:
+	* src/nautilus-desktop-window.c:
+	(nautilus_desktop_window_instance_init):
+	Disable close action on desktop window (#160100)
+
 2005-01-27  Martin Wehner  <martin.wehner@epost.de>
 
 	* src/nautilus-main.c: (register_icons):
