--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2005-01-28  Alexander Larsson  <alexl@redhat.com>
 
+	* libnautilus-private/nautilus-file.c:
+	Fix leak
+
+	* Makefile.am:
+	Remove unnecessary stuff
+
+2005-01-28  Alexander Larsson  <alexl@redhat.com>
+
 	* src/nautilus-actions.h:
 	* src/nautilus-desktop-window.c:
 	(nautilus_desktop_window_instance_init):
