--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-01-28  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* nb.po: Update
+
 2005-01-26  Adam Weinberger  <adamw@gnome.org>
 
 	* en_CA.po: Updated Canadian English translation.
