--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2005-01-29  Martin Wehner  <martin.wehner@epost.de>>
+
+	* libbackground/Makefile.am:
+	Use ${datadir} instead of ${prefix}/share for GNOME_ICONDIR.
+	Fixes bug #95008.
+	
+	Patch from Christian Neumair <chris@gnome-de.org>
+
 2005-01-28  Alexander Larsson  <alexl@redhat.com>
 
 	* libnautilus-private/nautilus-file.c:
