--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2005-01-30  Sven Herzberg  <herzi@gnome-de.org>
+
+	reviewed by: Martin Wehner  <martin.wehner@epost.de>
+
+	* libnautilus-private/nautilus-file-operations.c:
+	change the strings for move/copy/link/delete from "Files Moved:" to
+	"Moving file:", fixes #154839
+
 2005-01-28  Alexander Larsson  <alexl@redhat.com>
 
 	* libnautilus-private/nautilus-file.c:
