--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-02-01  Changwoo Ryu  <cwryu@debian.org>
+
+	* ko.po: Updated Korean translation.
+
 2005-01-31  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Updated Czech translation.
