--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-01-31  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* libnautilus-private/nautilus-directory-background.c:
+	(image_loading_done_callback): Free the color string.
+	Closes bug #154204.
+
 2005-01-30  Sven Herzberg  <herzi@gnome-de.org>
 
 	reviewed by: Martin Wehner  <martin.wehner@epost.de>
