--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-02-01  Adam Weinberger  <adamw@gnome.org>
+
+	* en_CA.po: Updated Canadian English translation.
+
 2005-02-01  Changwoo Ryu  <cwryu@debian.org>
 
 	* ko.po: Updated Korean translation.
