--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-02-02  Vincent van Adrighem  <adrighem@gnome.org>
+
+	* nl.po: Translation updated by Reinout van Schouwen.
+
 2005-02-01  Jordi Mallach  <jordi@sindominio.net>
 
 	* ca.po: Updated Catalan translation.
