Fix workarea detection on 64bit machines. Patch from Ian Wienand
2005-02-04  Alexander Larsson  <alexl@redhat.com>

	* src/file-manager/fm-desktop-icon-view.c (net_workarea_changed):
	Fix workarea detection on 64bit machines.
	Patch from Ian Wienand <ianw@gelato.unsw.edu.au>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-02-04  Alexander Larsson  <alexl@redhat.com>
+
+	* src/file-manager/fm-desktop-icon-view.c (net_workarea_changed):
+	Fix workarea detection on 64bit machines.
+	Patch from Ian Wienand <ianw@gelato.unsw.edu.au>
+
 2005-02-01  Alexander Larsson  <alexl@redhat.com>
 
 	* src/file-manager/fm-directory-view.c:
