Updated Hebrew translation.
* he.po: Updated Hebrew translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,18 +1,22 @@
+2005-02-04  Gil Osher  <dolfin@rpg.org.il>
+
+ * he.po: Updated Hebrew translation.
+
 2005-02-03  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
 
-	* es.po: Updated Spanish translation.
+ * es.po: Updated Spanish translation.
 
 2005-02-03  Vincent van Adrighem  <adrighem@gnome.org>
 
-	* nl.po: Translation updated by Reinout van Schouwen.
+ * nl.po: Translation updated by Reinout van Schouwen.
 
 2005-02-02  Priit Laes  <plaes@cvs.gnome.org>
 
-	* et.po: Translation updated by Ivar Smolin.
+ * et.po: Translation updated by Ivar Smolin.
 
 2005-02-02  Vincent van Adrighem  <adrighem@gnome.org>
 
-	* nl.po: Translation updated by Reinout van Schouwen.
+ * nl.po: Translation updated by Reinout van Schouwen.
 
 2005-02-01  Jordi Mallach  <jordi@sindominio.net>
 
