Added mnemonic for Browse Folder option. Added mnemonic for Empty Trash
2005-02-05  Martin Wehner  <martin.wehner@epost.de>

	* src/file-manager/fm-directory-view.c:
	(real_update_menus): Added mnemonic for Browse Folder option.
	* src/file-manager/fm-desktop-icon-view.c:
	(real_update_menus): Added mnemonic for Empty Trash option.
	Fixes #162307.

	Patch from Dinoop Thomas <dinoop.thomas@wipro.com>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2005-02-05  Martin Wehner  <martin.wehner@epost.de>
+
+	* src/file-manager/fm-directory-view.c:
+	(real_update_menus): Added mnemonic for Browse Folder option.
+	* src/file-manager/fm-desktop-icon-view.c:
+	(real_update_menus): Added mnemonic for Empty Trash option.
+	Fixes #162307.
+	
+	Patch from Dinoop Thomas <dinoop.thomas@wipro.com>
+	
 2005-02-04  Alexander Larsson  <alexl@redhat.com>
 
 	* src/file-manager/fm-desktop-icon-view.c (net_workarea_changed):
