Remove unused file.
2005-02-05  Martin Wehner  <martin.wehner@epost.de>

	* data/Makefile.am:
	* data/static_bookmarks.xml:
	Remove unused file.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2005-02-05  Martin Wehner  <martin.wehner@epost.de>
 
+	* data/Makefile.am:
+	* data/static_bookmarks.xml:
+	Remove unused file.
+
+2005-02-05  Martin Wehner  <martin.wehner@epost.de>
+
 	* src/file-manager/fm-directory-view.c:
 	(real_update_menus): Added mnemonic for Browse Folder option.
 	* src/file-manager/fm-desktop-icon-view.c:
