Make default desktop font localizable. (#138731)
2005-02-05  Martin Wehner  <martin.wehner@epost.de>

	* libnautilus-private/apps_nautilus_preferences.schemas.in:
	Make default desktop font localizable. (#138731)

	Patch from Takao Fujiwar <takao.fujiwara@sun.com>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2005-02-05  Martin Wehner  <martin.wehner@epost.de>
 
+	* libnautilus-private/apps_nautilus_preferences.schemas.in:
+	Make default desktop font localizable. (#138731)
+	
+	Patch from Takao Fujiwar <takao.fujiwara@sun.com>
+
+2005-02-05  Martin Wehner  <martin.wehner@epost.de>
+
 	* data/Makefile.am:
 	* data/static_bookmarks.xml:
 	Remove unused file.
