--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-02-05  Kostas Papadimas <pkst@gnome.org>
+
+	* el.po: Updated  Greek translation.
+
 2005-02-04  Gil Osher  <dolfin@rpg.org.il>
 
  * he.po: Updated Hebrew translation.
