--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-02-06  Martin Wehner  <martin.wehner@epost.de>
+
+	* configure.in:
+	Make libexif dependency optional again. (#165773)
+
 2005-02-05  Martin Wehner  <martin.wehner@epost.de>
 
 	* libnautilus-private/apps_nautilus_preferences.schemas.in:
