--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-02-06  Christian Rose  <menthos@menthos.com>
+
+	* sv.po: Updated Swedish translation.
+
 2005-02-06  Pauli Virtanen <pauli.virtanen@hut.fi>
 
 	 * fi.po: Updated Finnish translation.
@@ -8,23 +12,23 @@
 
 2005-02-04  Gil Osher  <dolfin@rpg.org.il>
 
- * he.po: Updated Hebrew translation.
+	* he.po: Updated Hebrew translation.
 
 2005-02-03  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
 
- * es.po: Updated Spanish translation.
+	* es.po: Updated Spanish translation.
 
 2005-02-03  Vincent van Adrighem  <adrighem@gnome.org>
 
- * nl.po: Translation updated by Reinout van Schouwen.
+	* nl.po: Translation updated by Reinout van Schouwen.
 
 2005-02-02  Priit Laes  <plaes@cvs.gnome.org>
 
- * et.po: Translation updated by Ivar Smolin.
+	* et.po: Translation updated by Ivar Smolin.
 
 2005-02-02  Vincent van Adrighem  <adrighem@gnome.org>
 
- * nl.po: Translation updated by Reinout van Schouwen.
+	* nl.po: Translation updated by Reinout van Schouwen.
 
 2005-02-01  Jordi Mallach  <jordi@sindominio.net>
 
