Translation updated by Ivar Smolin.
2005-02-07  Priit Laes  <plaes@cvs.gnome.org>

	* et.po: Translation updated by Ivar Smolin.

--- a/po/et.po
+++ b/po/et.po
@@ -3807,7 +3807,7 @@ msgstr "Ava uues aknas"
 #. name, stock id
 #: src/file-manager/fm-directory-view.c:5842
 msgid "Show _Hidden Files"
-msgstr "_Peidetud failide kuvamine"
+msgstr "Kuva _peidetud failid"
 
 #. label, accelerator
 #: src/file-manager/fm-directory-view.c:5843
@@ -6062,7 +6062,7 @@ msgstr "Kuvab Nautiluse abiteabe"
 #. name, stock id
 #: src/nautilus-window-menus.c:628
 msgid "_About"
-msgstr "_Info"
+msgstr "Nautilusest _lähemalt"
 
 #. label, accelerator
 #: src/nautilus-window-menus.c:629
