--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-02-07  Martin Wehner  <martin.wehner@epost.de>
+
+	* configure.in:
+	Revert libexif change as it breaks the build with new libexif.
+        
 2005-02-06  Martin Wehner  <martin.wehner@epost.de>
 
 	* libnautilus-private/nautilus-program-choosing.c:
