Updated Canadian English translation.
	* en_CA.po: Updated Canadian English translation.

--- a/po/en_CA.po
+++ b/po/en_CA.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: nautilus\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-02-06 18:30-0500\n"
+"POT-Creation-Date: 2005-02-07 12:15-0500\n"
 "PO-Revision-Date: 2005-02-06 20:03-0400\n"
 "Last-Translator: Adam Weinberger <adamw@gnome.org>\n"
 "Language-Team: English/Canada <adamw@FreeBSD.org>\n"
@@ -2238,7 +2238,7 @@ msgstr "00/00/00, 00:00 PM"
 
 #: libnautilus-private/nautilus-file.c:3021
 msgid "%m/%-d/%y, %-I:%M %p"
-msgstr "%m/%-d/%y, %-I:%M %p"
+msgstr "%-d/%m/%y, %-I:%M %p"
 
 #: libnautilus-private/nautilus-file.c:3023
 msgid "00/00/00"
@@ -2246,7 +2246,7 @@ msgstr "00/00/00"
 
 #: libnautilus-private/nautilus-file.c:3024
 msgid "%m/%d/%y"
-msgstr "%m/%d/%y"
+msgstr "%d/%m/%y"
 
 #: libnautilus-private/nautilus-file.c:4315
 #: src/file-manager/fm-directory-view.c:1859
