--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2005-02-07  Martin Wehner  <martin.wehner@epost.de>
+
+	* src/file-manager/fm-properties-window.c: (get_original_file),
+	(name_field_done_editing), (update_properties_window_title):
+	Handle disappearing original_files without crashing.
+	Fixes bug #151024/158904.
+
 2004-12-13  Dwayne Bailey  <dwayne@translate.org.za>
 
 	* configure.in: Added "zu" to ALL_LINGUAS.
