--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-02-08  Hendrik Richter  <hendrik@gnome-de.org>
+
+	* de.po: Updated German translation.
+
 2005-02-08  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* nb.po: Update
