--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-02-08  Leonid Kanter <leon@asplinux.ru>
+
+	* ru.po: Updated Russian translation
+
 2005-02-08  Hendrik Richter  <hendrik@gnome-de.org>
 
 	* de.po: Updated German translation.
