--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,18 @@
+2005-02-09  Alexander Larsson  <alexl@redhat.com>
+
+	* Makefile.am:
+	* nautilus-folder-handler.desktop.in:
+	Add new default folder handler NoDisplay desktop file
+	
+	* nautilus.desktop.in:
+	Add %U to exec line
+	
+	* src/Nautilus_shell.server.in:
+	Remove all the bonobo components we no longer support
+	
+	* src/file-manager/fm-directory-view.c:
+	Allow open with menu on folders (#151747)
+	
 2005-02-08  Martin Wehner  <martin.wehner@epost.de>
 
 	* src/file-manager/fm-list-view.c: (cell_renderer_edited),
