--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-02-09  Priit Laes  <plaes@cvs.gnome.org>
+
+	* et.po: Translation updated by Ivar Smolin.
+
 2005-02-08  Leonid Kanter <leon@asplinux.ru>
 
 	* ru.po: Updated Russian translation
