--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,12 @@
-This is nautilus 2.9.90, the file manager for the Gnome 2 desktop.
+This is nautilus 2.9.91, the file manager for the Gnome 2 desktop.
+
+Major changes in 2.9.91 are:
+* Fix some crashes
+* Don't pop up mozilla dnd ask dialog under windows
+* Change the look of the path button to make it easier to find
+* Some changes to the look/text of the progress dialog
+* Fix panel size detection on 64bit machines
+* Allow open with menu on folders
 
 Major changes in 2.9.90 are:
 * Better window titles for browser windows
