--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2005-02-10  Alexander Larsson  <alexl@redhat.com>
+
+	* configure.in:
+	Bump eel requires
+
+	* NEWS:
+	Update for release
+
 2005-02-09  Alexander Larsson  <alexl@redhat.com>
 
 	* Makefile.am:
