--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,13 @@
 2005-02-10  Alexander Larsson  <alexl@redhat.com>
 
 	* configure.in:
+	Post release version bump
+
+=== nautilus 2.9.91 ===
+	
+2005-02-10  Alexander Larsson  <alexl@redhat.com>
+
+	* configure.in:
 	Bump eel requires
 
 	* NEWS:
