--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-02-10  Priit Laes  <plaes@cvs.gnome.org>
+
+	* et.po: Translation updated by Ivar Smolin.
+
 === nautilus 2.9.91 ===
 	
 2005-02-10  Žygimantas Beručka  <uid0@akl.lt>
