--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,5 +1,9 @@
 2005-02-10  Priit Laes  <plaes@cvs.gnome.org>
 
+	* et.po: Translation updated.
+
+2005-02-10  Priit Laes  <plaes@cvs.gnome.org>
+
 	* et.po: Translation updated by Ivar Smolin.
 
 === nautilus 2.9.91 ===
